# parsec

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  tutorial.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: master.yml  pr.yml
benches/: bench.rs
docs/: sees.md  tutorial.md
dot_gen/: Cargo.toml
dot_gen/src/: main.rs
examples/: basic.rs
input_graphs/bench_section_size_evt1024_interleave/: a_node16_opaque_evt1024.dot  a_node32_opaque_evt1024.dot  a_node4_opaque_evt1024.dot  a_node8_opaque_evt1024.dot
input_graphs/bench_section_size_evt1024_interleave_supermajority/: a_node4_opaque_evt1024.dot  a_node8_opaque_evt1024.dot
input_graphs/bench_section_size_evt16/: a_node12_opaque_evt16.dot  a_node16_opaque_evt16.dot  a_node24_opaque_evt16.dot  a_node32_opaque_evt16.dot  a_node48_opaque_evt16.dot  a_node4_opaque_evt16.dot  a_node8_opaque_evt16.dot  b_node12_opaque_evt16.dot  b_node16_opaque_evt16.dot  b_node24_opaque_evt16.dot  b_node4_opaque_evt16.dot  b_node8_opaque_evt16.dot  c_node12_opaque_evt16.dot  c_node16_opaque_evt16.dot  c_node24_opaque_evt16.dot  c_node4_opaque_evt16.dot  c_node8_opaque_evt16.dot
input_graphs/bench_section_size_evt16_single/: a_node16_opaque_evt16.dot  a_node32_opaque_evt16.dot  a_node48_opaque_evt16.dot  a_node4_opaque_evt16.dot  a_node8_opaque_evt16.dot
input_graphs/bench_section_size_evt8/: a_node12_opaque_evt8.dot  a_node16_opaque_evt8.dot  a_node24_opaque_evt8.dot  a_node32_opaque_evt8.dot  a_node48_opaque_evt8.dot  a_node4_opaque_evt8.dot  a_node8_opaque_evt8.dot  b_node12_opaque_evt8.dot  b_node16_opaque_evt8.dot  b_node24_opaque_evt8.dot  b_node4_opaque_evt8.dot  b_node8_opaque_evt8.dot  c_node12_opaque_evt8.dot  c_node16_opaque_evt8.dot  c_node24_opaque_evt8.dot  c_node4_opaque_evt8.dot  c_node8_opaque_evt8.dot
input_graphs/bench_section_size_evt8192_interleave/: a_node4_opaque_evt8192.dot  a_node8_opaque_evt8192.dot
input_graphs/bench_section_size_evt8_single/: a_node16_opaque_evt8.dot  a_node32_opaque_evt8.dot  a_node48_opaque_evt8.dot  a_node4_opaque_evt8.dot  a_node8_opaque_evt8.dot
input_graphs/benches/: dynamic.dot  minimal.dot  static.dot
input_graphs/consensus_with_forks/: alice.dot  bob.dot  carol.dot  dave.dot  eric.dot
input_graphs/dev_utils_record_tests_smoke_dkg/: alice.dot
input_graphs/dev_utils_record_tests_smoke_other_peer_names/: annie.dot
input_graphs/dev_utils_record_tests_smoke_partial_dkg/: alice.dot
input_graphs/dev_utils_record_tests_smoke_routing/: minimal.dot
input_graphs/functional_tests_add_peer/: alice.dot  carol.dot
input_graphs/functional_tests_from_parsed_contents/: 0.dot  1.dot
input_graphs/functional_tests_handle_malice_accomplice/: alice.dot  bob.dot  carol.dot
input_graphs/functional_tests_handle_malice_basic_fork/: alice.dot  bob.dot  dave.dot
scripts/: clippy  tests
src/: block.rs  dump_graph.rs  error.rs  functional_tests.rs  hash.rs  id.rs  lib.rs  mock.rs  network_event.rs  observation.rs  parsec.rs  parsec_helpers.rs  peer_list.rs  round_hash.rs  seeded_rng.rs  vote.rs
tests/: integration_tests.rs
(+93 files in other folders)
