[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Implementation of Protocol for Asynchronous, Reliable, Secure and Efficient Consensus"
documentation = "https://docs.rs/parsec"
edition = "2018"
exclude = ["input_graphs/*"]
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "parsec"
readme = "README.md"
repository = "https://github.com/maidsafe/parsec"
version = "0.7.0"

[dependencies]
fnv = "~1.0.6"
itertools = "~0.8.0"
lazy_static = "1.4"
log = "~0.3.8"
maidsafe_utilities = "~0.19.0"
pom = { version = "~1.1.0", optional = true }
proptest = { version = "~0.8.6", optional = true }
rand = "~0.7.2"
rand_core = "~0.5.1"
rand_maidsafe_utilities = { package = "rand", version = "~0.3.15" }
rand_threshold_crypto = { package = "rand", version = "~0.6.5" }
rand_xorshift = { version = "~0.2.0", optional = true }
serde = "~1.0.66"
serde_derive = "~1.0.66"
tiny-keccak = "~1.5.0"
unwrap = "~1.2.1"
threshold_crypto = "~0.3.1"
failure = "~0.1.5"

[dev-dependencies]
clap = "~2.32.0"
criterion = "~0.2.5"
pom = "~1.1.0"
rand_xorshift = "~0.2.0"
walkdir = "~2.2.7"

[features]
dump-graphs = []
mock = []
testing = ["maidsafe_utilities/testing", "proptest", "mock", "pom", "rand_xorshift"]
malice-detection = []

[workspace]
members = ["dot_gen"]

[lib]
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["mock"]

[[bench]]
name = "bench"
harness = false
